implemented some fields